--- a/assets/style.css
+++ b/assets/style.css
@@ -3,14 +3,21 @@
 }
 
 #gRNA-title {
+    border-radius: .40rem;
     text-align: center;
     font-size: 3rem;
+    margin: 2.5% auto 15%;
+    background-color: #78c2ad;
+    color: white;
 }
 
 #seq-input {
     border-radius: 1rem;
-    font-size: 1.75rem;
+    font-size: 2rem;
     text-align: center;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 i {
@@ -21,18 +28,18 @@ i {
     text-align: center;
 }
 
-.download-btn {
+#download-btn {
     text-align: center;
     border-radius: .40rem;
     padding: .75rem 1.875rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1% auto;
+    margin: 1% auto 10%;
     width: fit-content;
 }
 
-.download-btn:hover {
+#download-btn:hover {
     transform: scale(1.1);
     background-color: #5a5a5a;    
     color: white;
@@ -45,8 +52,13 @@ i {
     align-items: center;
     font-size: 1 rem;
     text-align: center;
-    bottom: 0;
-    width: 100%;
+    position:fixed;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    width:100%;
+    overflow: hidden;
+    margin:0;
 }
 
 #github-link {
